--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = carebt
 version = 1.0.0-snapshot
+license = Apache License 2.0
 author = Andreas Steck
 author_email = steck.andi@gmail.com
 description = A Python library for contingency aware behavior trees (careBT)
