--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,6 @@ classifiers =
     License :: OSI Approved :: Apache License 2.0
 
 [options]
-package_dir =
-    = carebt
-packages = find:
+include_package_data = true
+packages = carebt
 python_requires = >=3.8
-
-[options.packages.find]
-where = carebt
