typo fixed -> careBT

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,12 @@ version = 1.0.0-snapshot
 license = Apache License 2.0
 author = Andreas Steck
 author_email = steck.andi@gmail.com
-description = A Python library for contingency aware behavior trees (careBT)
+description = A Python library for contingency aware Behavior Trees (careBT)
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/CareBT/careBT
+url = https://github.com/careBT/careBT
 project_urls =
-    Bug Tracker = https://github.com/CareBT/careBT/issues
+    Bug Tracker = https://github.com/careBT/careBT/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache License 2.0
