--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = carebt
-version = 1.0.0-snapshot
+version = attr: carebt.version.__version__
 license = Apache License 2.0
 author = Andreas Steck
 author_email = steck.andi@gmail.com
