Add marker pytest.mark.serial to exclude tests from vscode's parallel test execution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.testing.pytestArgs": [
-        "tests", "-s", "-vv"
+        "tests", "-s", "-vv", "-m not serial"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
