--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.testing.pytestArgs": [
-        "tests", "-s", "-vv", "-m not serial"
+        "tests", "-s", "-vv"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
