--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,9 @@ author_email = steck.andi@gmail.com
 description = A Python library for contingency aware Behavior Trees (careBT)
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/careBT/careBT
+url = https://github.com/careBT/carebt_core
 project_urls =
-    Bug Tracker = https://github.com/careBT/careBT/issues
+    Bug Tracker = https://github.com/careBT/carebt_core/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache License 2.0
@@ -17,4 +17,4 @@ classifiers =
 [options]
 include_package_data = true
 packages = carebt
-python_requires = >=3.8
+python_requires >= 3.8
