--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,7 +10,15 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.8"
+    dot: "2.43"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
+
+python:
+  install:
+  - requirements: docs/requirements.txt
+
+submodules:
+  include: all
