--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
   tools:
     python: "3.8"
   apt_packages:
-    - dot
+    - graphviz
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
