--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ project_urls =
     Bug Tracker = https://github.com/careBT/carebt_core/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: Apache License 2.0
+    License :: OSI Approved :: Apache Software License
 
 [options]
 include_package_data = true
