--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,23 +12,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    # Step 1: Checkout the code
+    - uses: actions/checkout@v3
+
+    # Step 2: Set up Python
     - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.8
+
+    # Step 3: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest coverage
+        pip install pytest pytest-cov coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    
+    # Step 4: Run tests and generate coverage XML
     - name: Test with pytest
       run: |
         coverage run --branch --source=carebt -m pytest
+        coverage xml
 
-    - uses: paambaati/codeclimate-action@v9.0.0
-      if: always()
-      env:
-        CC_TEST_REPORTER_ID: ${{ secrets.CodeClimate }}
+    # Step 5: Upload coverage to Code Climate
+    - name: Upload coverage to Code Climate
+      uses: codeclimate/codeclimate-action@v0.5.0
       with:
         coverageCommand: coverage xml
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CodeClimate }}
