--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,6 +38,6 @@ jobs:
     - name: Upload coverage to Qlty
       uses: qltysh/qlty-action/coverage@v2.2.0
       with:
-        token: ${{ secrets.QLTCP_API_KEY }}
+        token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
         files: coverage.xml
         tag: unit        
